2007-03-27  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Cross-reference 'set datafile fortran'.

2007-03-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.h src/graphics.c (plot_image_or_update_axes)
	term/pdf.trm (PDF_filled_polygon) src/color.c (filled_quadrangle
	filled_polygon_3dcoods filled_polygon_3dcoords_zfixed):
	Change gpiPoints to contain signed x,y values. This is what the
	explanatory comment always implied ("same as in gd.h"), but it 
	wasn't true.  The change fixes several image and polygon clipping
	problems, including segfaults in the pdf driver.  It also fixes
	broken filledcurves on 64-bit machines.
	Bug #1612502

2007-03-21 Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graphics.c (boundary): The change of 2007-02-25 overlooked the
	2D plots having palettes that also required setup_tics(COLOR_AXIS,).
	Bug #1684789

2007-03-21  Ethan Merritt  <merritt@u.washington.edu>

	These are mostly trivial patches that went into CVS soon after the
	code freeze for 4.2

	* src/graphics.c (plot_impulses plot_points plot_dots) 
	src/plot2d.c (get_data store_2dpoint store_label):
	Allows a third column of data containing color info to be used in
	2D plots (points/dots/impulses/labels),

	* term/gd.trm (PNG_image) term/pdf.trm (PDF_image)
	term/post.trm (PS_image) 
	src/wxterminal/gp_cairo.c (gp_cairo_draw_fillbox gp_cairo_draw_image):
	Teach gd pdf post and wxt terminals to clip images using the
	bounding box info passed in corners[2] and corners[3] via term->image().

	* term/pdf.trm (PDF_SetFont): Trap errors from PDF font selection, 
	making it non-fatal.

	* src/axis.c (get_position_default):  
	Reduce the problem of trailing comma after 2D offset.

	* src/graph3d.c (plot3d_impulses): splot with impulses lt rgb variable.

	* src/graphics.c (do_key_sample):
	If the length of a boxplot sample in the key is set to zero,  do not
	draw it at all.  Without this patch, a spurious vertical line appears